--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="C:\Users\harshit\Pictures\images.jfif" alt=""></td>
+      <td><img src="images.jfif" alt=""></td>
       <td>
         <h1>Harshit Borkar</h1>
         <p><em><a href="https://www.youtube.com/watch?v=nzEDGH-3U-0">Enter Shanks <strong>stops</strong> the war</a></em></p>
