--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
 
   </table>
   <hr>
-  <h3><a href="html/Hobbies.html">My Hobbies</a></h3>
-  <h3><a href="html/Contact.html">Contact</a></h3>
+  <h3><a href="html/hobbies.html">My Hobbies</a></h3>
+  <h3><a href="html/contact.html">Contact</a></h3>
 
 </body>
 
