--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="html/images.jfif" alt=""></td>
+      <td><img src="images.jfif" alt=""></td>
       <td>
         <h1>Harshit Borkar</h1>
         <p><em><a href="https://www.youtube.com/watch?v=nzEDGH-3U-0">Enter Shanks <strong>stops</strong> the war</a></em></p>
@@ -77,8 +77,8 @@
 
   </table>
   <hr>
-  <h3><a href="html/hobbies.html">My Hobbies</a></h3>
-  <h3><a href="html/contact.html">Contact</a></h3>
+  <h3><a href="hobbies.html">My Hobbies</a></h3>
+  <h3><a href="contact.html">Contact</a></h3>
 
 </body>
 
