--- a/hobbies.html
+++ b/hobbies.html
@@ -8,7 +8,7 @@
   <body>
 
     <ol>
-      <li><a href="https://mega.nz/file/9VB2RJhS#4bSTU5mJl68PUo33FyWo_BWoyHzf7cG8hoVMiJYaSts">Play games</a></li>
+      <li><a href="blob:https://mega.nz/705b10f6-0ba6-4f00-98ec-4848d6e818c3">Play games</a></li>
       <li>Drink coffey</li>
     </ol>
 
